Fix button 1 being stuck down on certain Logitech gamepads on Windows

There are HID elements in these gamepads classified as buttons which
don't use the usage page value for buttons. These elements don't actually
correspond to real buttons on the controller, and are stuck in the pressed
position. On OSX, we skip these "fake" buttons, but we didn't on Windows.
As a result, a HID element would overlap with button 1 and make it appear
to be constantly pressed.

R=bajones@chromium.org

BUG=600230

Review-Url: https://codereview.chromium.org/1950883002
Cr-Commit-Position: refs/heads/master@{#391616}

Former-commit-id: a8d9d22865f445b8f6f2b9814fb919b8008fbc5c